# notion-mcp-remote

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PRIVACY.md  README.md  client_patch.py  pyproject.toml  qa_test.py  requirements.txt  server.py
.github/workflows/: publish.yml
auth/: discovery_auth.py  provider.py  storage.py
systemd/: ngrok-notion.service  notion-mcp-remote.service
