[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-mcp-remote-ldraney"
version = "0.2.0"
description = "Remote MCP connector wrapping notion-mcp with Notion OAuth 2.0 over Streamable HTTP"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Lucas Draney", email = "ldraney@users.noreply.github.com" },
]
keywords = ["notion", "mcp", "oauth", "remote", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
]
dependencies = [
    "notion-mcp-ldraney>=0.1.12,<1.0",
    "mcp-remote-auth-ldraney>=0.1.0",
    "python-dotenv>=1.2.1,<2.0",
    "uvicorn>=0.34",
]

[project.urls]
Homepage = "https://github.com/ldraney/notion-mcp-remote"
Repository = "https://github.com/ldraney/notion-mcp-remote"
Issues = "https://github.com/ldraney/notion-mcp-remote/issues"

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
"client_patch.py" = "client_patch.py"

[tool.hatch.build.targets.sdist]
include = ["server.py", "client_patch.py", "pyproject.toml", "README.md", "requirements.txt"]
